# Homework-Bot

./: .gitignore  Dockerfile  LICENSE  README.md  generate_key.py  pyproject.toml
src/homework_bot/: __init__.py  __main__.py  api_operations.py  bot.py  db_operations.py  main.py  responses.py  utils.py
src/homework_bot/cogs/: __init__.py  guild_config.py  homework_info.py  homework_list.py  homework_management.py  homework_notify.py  homework_statistic.py
src/homework_bot/main_bot/: __init__.py
src/homework_bot/main_bot/cogs/: __init__.py  classroom_management.py  guild_config.py  homework_info.py  homework_notify.py  homework_statistic.py  utility_and_monitoring.py
src/homework_bot/utility_bot/: __init__.py
src/homework_bot/utility_bot/cogs/: __init__.py  classroom_management.py  utility_and_monitoring.py
